# indi

./: .directory  .gitattributes  .gitignore  .gitmodules  .svnignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  DartConfiguration.tcl  Dockerfile  Doxyfile  README  README.Cygwin  README.md  base64.c  base64.h  base64_luts.h  build  build_docker.sh  build_local.sh  config-usb.h  config.h  developer-build.bash  drivers.xml  eventloop.c  eventloop.h  indi_arduinost4  indi_astrometry  indi_baader_dome  indi_celestron_gps  indi_dmfc_focus  indi_dsc_telescope  indi_eval  indi_flipflat  indi_gemini_focus  indi_getprop  indi_gpusb  indi_hid_test  indi_hitecastrodc_focus  (+92 more)
drivers/: CMakeLists.txt  README.md
drivers/agent/: CMakeLists.txt  agent_imager.cpp  agent_imager.h  group.cpp  group.h  indi_imager_agent
drivers/alpaca/: CMakeLists.txt  README.md  alpaca_client.cpp  alpaca_client.h  alpaca_discovery.cpp  alpaca_discovery.h  device_manager.cpp  device_manager.h  indi_alpaca_server.cpp  indi_alpaca_server.h
drivers/auxiliary/: 99-indi_auxiliary.rules  CMakeLists.txt  Excalibur.cpp  Excalibur.h  STAR2000.cpp  STAR2000.h  STAR2kdriver.c  Terrans_PowerBoxGo_V2.cpp  alto.cpp  (+162 more)
indi/: .cproject  CMakeLists.txt  INSTALL  README  README.robofocus  base64.h  drivers.xml  eventloop.h  fq.c  fq.h  indiapi.h
indi-knro/: .cvsignore  Authors  CMakeLists.txt  ChangeLog  Readme  encoder.cpp  encoder.h  indi_knro.xml  install  inverter.cpp  inverter.h  knro.cpp  knro.h  knro_common.h  ogg_util.cpp  ogg_util.h  polling.cpp  spectrometer.cpp  spectrometer.h
indi-qhy/: AUTHORS  CMakeLists.txt  Makefile  cmake_install.cmake  indi_qhy.xml  qhy5_driver.c  qhy5_driver.h  qhy_ccd.c
indiserver/: CMakeLists.txt  ClInfo.cpp  ClInfo.hpp  Collectable.hpp  CommandLineArgs.hpp  ConcurrentSet.hpp  Constants.hpp  DvrInfo.cpp  DvrInfo.hpp  Fifo.cpp  Fifo.hpp  LocalDrvInfo.hpp  LocalDvrInfo.cpp  Msg.cpp  Msg.hpp  MsgChunck.cpp  MsgChunck.hpp  MsgChunckIterator.hpp  MsgQueue.cpp  MsgQueue.hpp  Property.hpp  RemoteDvrInfo.cpp  RemoteDvrInfo.hpp  SerializationRequirement.cpp  SerializationRequirement.hpp  SerializedMsg.cpp  SerializedMsg.hpp  SerializedMsgWithSharedBuffer.cpp  SerializedMsgWithSharedBuffer.hpp  SerializedMsgWithoutSharedBuffer.cpp  SerializedMsgWithoutSharedBuffer.hpp  TcpServer.cpp  TcpServer.hpp  UnixServer.cpp  UnixServer.hpp  Utils.cpp  Utils.hpp  indiserver  indiserver.cpp
integs/: CMakeLists.txt  ConnectionMock.cpp  ConnectionMock.h  DriverMock.cpp  DriverMock.h  FakeDriverCnx.cpp  FakeDriverCnx.h  IndiClientMock.cpp  IndiClientMock.h  IndiServerCnx.cpp  IndiServerCnx.h  IndiServerController.cpp  IndiServerController.h  ProcessController.cpp  ProcessController.h  ServerMock.cpp  ServerMock.h  SharedBuffer.cpp  SharedBuffer.h  TestClientQueries.cpp  TestIndiClient.cpp  TestIndiSetProp.cpp  TestIndiserverSingleDriver.cpp  XmlAwaiter.cpp  XmlAwaiter.h  XmlAwaiterTest.cpp  customTestProps.cmake  fakedriver.cpp  utils.cpp  utils.h
libapogee/: .project  AUTHORS  Apn.h  ApnCamData.h  ApnCamData_ASCENT0402ME.cpp  ApnCamData_ASCENT0402ME2.h  ApnCamData_ASCENT0402ME3.cpp  ApnCamData_ASCENT0402ME4.h  ApnCamData_ASCENT16000.cpp  ApnCamData_ASCENT2000.h  ApnCamData_ASCENT4000.cpp  ApnCamData_ASCENT4000.h  ApnCamData_CCD3011B.h  ApnCamData_CCD4240.cpp  ApnCamData_CCD4240.h  ApnCamData_CCD4240B.cpp  ApnCamData_CCD4710.h  ApnCamData_CCD4720B.h  ApnCamData_CCD5520.cpp  ApnCamData_CCD5520B.cpp  ApnCamData_CCD5710.cpp  ApnCamData_CCD5710.h  ApnCamData_CCD5710F.h  ApnCamData_CCD7700.cpp  ApnCamData_CCD7700B.h  ApnCamData_KAF0261E.cpp  ApnCamData_KAF0261E.h  ApnCamData_KAF0261EB.h  ApnCamData_KAF0401E.h  ApnCamData_KAF0401EB.cpp  ApnCamData_KAF0401EB.h  ApnCamData_KAF09000.cpp  ApnCamData_KAF09000.h  ApnCamData_KAF09000H.cpp  ApnCamData_KAF09000H.h  ApnCamData_KAF09000X.cpp  ApnCamData_KAF09000X.h  ApnCamData_KAF10011105.cpp  ApnCamData_KAF1001EB.h  ApnCamData_KAF1001ENS.cpp  (+58 more)
libfli/: .project  CMakeLists.txt  fliusb_ioctl.h  libfli-camera-parport.c  libfli-camera-usb.c  libfli-camera-usb.h  libfli-camera.c  libfli-camera.h  libfli-debug.h  libfli-filter-focuser.c  libfli-filter-focuser.h  libfli-libfli.h  libfli-mem.c  libfli-sys.c  libfli-sys.h  libfli-usb-sys.c  libfli.c  libfli.h
libindi/: .cproject  .project  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  NEWS  README  README.drivers  README.stv  base64.c  base64.h  base64_luts.h  config.h  config.h.cmake  drivers.xml  eventloop.c  eventloop.h  fq.c  fq.h  indiapi.h  indidevapi.h  indidriver.c  indidriver.h  indidrivermain.c  indidrivermain.h  indidrivermain_gbls.c  indiio.cpp  indiserver.c  libindi.kdev4  libindi.pc.cmake
libnova/: .cproject  .project  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  aberration.c  airmass.c  angular_separation.c  apparent_position.c  asteroid.c  comet.c  dynamical_time.c  earth.c  elliptic_motion.c  hyperbolic_motion.c  julian_day.c  jupiter.c  lunar.c  mars.c  mercury.c  neptune.c  nutation.c  parabolic_motion.c  parallax.c  pluto.c  precession.c  proper_motion.c  refraction.c  rise_set.c  saturn.c  sidereal_time.c  solar.c  transform.c  uranus.c  utility.c  venus.c  (+1 more)
libqsi/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  FilterWheel.cpp  Makefile.am  Makefile.in  QSI_Interface.cpp  QSI_Interface.h  QSI_PacketWrapper.h  QSI_Registry.h  QSI_USBWrapper.h  README  configure  configure.ac  ftd2xx.h  libqsiapi-config.in
sbig/: 10-sbig.rules  99-sbig.rules  CMakeLists.txt  INSTALLED_FILES  sbig_install_drivers.py  sbig_load.sh  sbig_perm.sh  sbigfcam.hex  sbiglcam.hex  sbigucam.hex
test/: CMakeLists.txt
tools/: CMakeLists.txt  compiler.c  evalINDI.c  generate_golden_files.py  getINDIdevice.c  getINDIproperty.c  indi_eval  indi_getprop  indi_setprop  joystick_analyze.cpp  setINDIproperty.c
ujari/: AUTHORS  CMakeLists.txt  INSTALL  README  amccontroller.cpp  amccontroller.h  config.h.cmake  encoder.cpp  encoder.h  forkmount.cpp  forkmount.h  hy_modbus.cpp  hy_modbus.h  indi_ujari.xml  indi_ujari_sk.xml  inverter.cpp  inverter.h  ujari.cpp  ujari.h  ujarierror.cpp  ujarierror.h
(+2550 files in other folders)
